# VPA

./: .env.example  .gitignore  AI_LOGIC_INTEGRATION_PLAN.md  BASE_APP_ALL_ERRORS.md  BRINGUP_VALIDATION.md  CONSOLIDATED_RECOVERY_REPORT.md  CONTINUOUS_INTEGRITY_AUDIT_SCHEDULE.md  CONTRIBUTING.md  CRITICAL_MILESTONE_CROSS_CHECK_FAILURE.md  CRITICAL_REMEDIATION_ACTION_PLAN.md  ETHICS_INTEGRITY_GUARANTEE.md  EVIDENCE_BASED_AUDIT_SUMMARY.md  FEATURE_INVENTORY.md  GUI_SMOKE_REPORT.md  INSTALL_WINDOWS.md  INTEGRATION_LOG.md  Implementation_Gap_Tracker.md  PERFORMANCE_CLEANUP_COMPLETE.md  PERF_BASELINE.md  PHASE2_CHECKLIST.md  PHASE_2_REPORT.md  PROJECT_ANALYSIS_MAIN.md  PROJECT_ANALYSIS_MAIN_ENHANCED.md  PROJECT_ANALYSIS_REFERENCEDOCS.md  PROJECT_ANALYSIS_REFERENCEDOCS_ENHANCED.md  RAG_SYSTEM_ARCHITECTURE_ALIGNMENT_REPORT.md  README.md  RECOVERY_REPORT.md  RECOVERY_REPORT_LOCAL.md  RELEASE_NOTES.md  RELEASE_NOTES_DRAFT.md  SECTIONAL_CLOSURE_FINAL_REPORT.md  SECTIONAL_CLOSURE_PROTOCOL.md  SMOKE_REPORT.md  STAKEHOLDER_AUDIT_NOTIFICATION.md  STAKEHOLDER_FINAL_NOTIFICATION.md  STAKEHOLDER_NOTIFICATION_ARCHIVE.md  STATUS_CHECKPOINT.md  STATUS_LOCK.json  SYSTEM_VERIFICATION_PROTOCOL.md  (+84 more)
.github/: copilot-instructions.md
archive/: ai_plugin_integration_test.py  audio_calibration_test.py  audio_diagnostics.py  audio_integration_plan.py  comprehensive_validation.py  comprehensive_voice_assessment.py  comprehensive_voice_discovery.py  detailed_voice_test.py  edge_tts_voice_system.py  final_closure_summary.py  final_project_closure_documentation.py  install_edge_tts.py  microsoft_logic_old.py  oauth_flow_comprehensive_test.py  operational_status_summary.py  production_deployment_test.py  project_completion_summary.py  simple_neural_voice_test.py  simple_voice_test.py  test_all_voices.py  test_base_app_integration.py  test_integration.py  test_neural_voice_integration.py  test_phase3_integration.py  test_phase4_performance.py  test_phase4_simplified.py  test_voices_audio.py  ultra_simple_voice.py  voice_configuration_system.py  voice_mapping_diagnostic.py  voice_switching_direct_sapi_fix.py  voice_switching_fix_test.py  voice_system_diagnostic.py  voice_test.py  voice_validation_test.py  vpa_agent_voice_demo.py  vpa_integration_status_checker.py  vpa_neural_voice_diagnostic.py  vpa_system_status_report.py  vpa_voice_implementation.py  (+3 more)
archive/duplicate_files/: addon_logic_module.py
archive/legacy_files_20250721_083431/: cleanup_gui.py  demo_advanced_analytics_optimization.py  gui_screen_tester.py  install_audio_dependencies.py  oauth_flow_demo.py  oauth_production_validation.py  quick_test_record.py  record_button_status.py  test_audio_core.py  test_chat_components.py  test_debug.py  test_gui.py  test_intents.py  test_main_app_voice.py  test_oauth_flow.py  test_production_audio_system.py  test_record_button.py  test_record_functionality.py  test_updated_voice_system.py  test_voice_fix.py  test_vpa_system.py  (+14 more)
config/: default.yaml  ui_settings.json  voice_settings.json
docs/: ADVANCED_LLM_PROVIDER_EXPANSION.md  ADVANCED_LLM_PROVIDER_EXPANSION_COMPLETION_REPORT.md  ADVANCED_LLM_PROVIDER_EXPANSION_CONFIG.md  API_REFERENCE.md  AUDIO_GAP_ANALYSIS.md  FRESH_IMPLEMENTATION_LOG.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_PROTOCOL.md  LOGBOOK.md  PERFORMANCE_OPTIMIZATION.md  PHASE_3_COMPLETION_REPORT.md  PHASE_3_EVIDENCE_VERIFICATION.md  PLAN.md  PRODUCTION_VECTOR_DATABASE_INTEGRATION.md  SESSION_STATE_SAVE_2025-07-16.md  SYSTEM_RULES.md  UNIFIED_COMPREHENSIVE_EVIDENCE_REPORT.md
examples/: rag_llm_integration_demo.py
karl_documents/: Priority_1_Implementation_Report.md  Priority_2_Implementation_Plan.md  RAG_VPA_System_Architecture_Status_Report.md  VPA_Architecture_Analysis_Comprehensive_Feedback.md
legacy_archive_cleanup/: DEPLOYMENT_EVIDENCE_LOG.md  MILESTONE_COMPLETION_SUMMARY.md  PHASE4_FINAL_ASSESSMENT.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_READY.md  PROJECT_REALIGNMENT_EVIDENCE_BASED.md  SYSTEM_REALIGNMENT_REPORT_20250719.md  VPA_AUTHENTICATION_SYSTEM_COMPLETE.md  VPA_CIRCULAR_IMPORT_FIX_REPORT_20250719.md  VPA_COMPREHENSIVE_AUDIT_REPORT_20250716.md  VPA_Development_Status_Summary.md  VPA_FINAL_CLOSURE_COMPLETE.md  VPA_FINAL_OPERATIONAL_CLOSURE_COMPLETE.md  VPA_FINAL_PROJECT_CLOSURE_COMPLETE.md  VPA_FINAL_USER_TESTING_READINESS_REPORT.md  VPA_FULL_PROJECT_ALIGNMENT_COMPLETE.md  VPA_FULL_SEQUENTIAL_AUDIT_REPORT_20250719.md  VPA_MASTER_ALIGNMENT_LOGBOOK.md  VPA_Neural_Voice_Integration_Report.md  VPA_OAUTH_IMPLEMENTATION_COMPLETE.md  VPA_OPERATIONAL_HANDOVER_COMPLETE.md  VPA_OPERATIONS_LOG.md  VPA_PRODUCTION_DEPLOYMENT_COMPLETE.md  VPA_PRODUCTION_OPERATIONS_ACTIVE.md  VPA_PROJECT_COMPREHENSIVE_REPORT.md  VPA_REALIGNMENT_REPORT_20250721.md  VPA_SAFE_CODING_COMPLETION_ASSESSMENT.md  VPA_SYSTEM_AUDIT_REPORT_20250719.md  VPA_SYSTEM_STATUS_FINAL_ALIGNMENT.md  VPA_VOICE_MANDATE_COMPLETION_REPORT.md  WEEKLY_AUDIT_PREPARATION_REPORT.md  continuous_improvement_scalability_validation_20250717_153841.json  continuous_improvement_scalability_validation_20250717_153913.json  continuous_improvement_scalability_validation_20250717_154009.json  neural_voice_config.json  quality_ux_deployment_validation.json  quality_ux_test_results.json  test_telegram_addon_logic_enhanced.py  test_whatsapp_addon_logic_enhanced.py
logs/: integration_log.json
reports/: test_validation_report.html  validation_framework_test_20250715_153003.json
scripts/: benchmark_llm_providers.py  benchmark_vector_database.py  deploy_continuous_improvement_scalability.py  deploy_quality_ux_enhancements.py  integration_test_vector_database.py  test_llm_provider_integration.py
src/: main.py  plugin_cache.json
tests/: .coverage  README.md  __init__.py  audio_commands_user_tests.py  conftest.py  integration_test_suite.py  karls_tests.md  test_core_architecture.py  user_validation_suite.py
tools/: integration_manager.py  integration_protocol.py  project_hygiene.py  test_validation_framework.py  validation_framework.py
vpa_config/: agent_voice_config.json
vpa_production_config/: production_voice_config.json
(+157 files in other folders)
